# garticmon-bot

./: .gitignore  index_icon.py  index_spritesheet.py  main.py  pyproject.toml
